--- a/css/login-page.css
+++ b/css/login-page.css
@@ -237,6 +237,7 @@ button:active{
     margin-top: 8px;
     margin-bottom: 15px;
     width: 100%;
+    height: 28px;
     border: none;
     border-bottom: 1px solid #e3e3e3;
 }
