--- a/css/login-page.css
+++ b/css/login-page.css
@@ -145,12 +145,14 @@ button:active{
     padding: 0 65px;
     width: 350px;
     height: 215px;
+    font: 20px Arial,sans-serif;
+    background: url("../imgs/text-bg.png");
+}
+.msg p{
     word-break: normal;
     white-space: pre-wrap;
     -ms-word-wrap: break-word;
     word-wrap: break-word;
-    font: 20px Arial,sans-serif;
-    background: url("../imgs/text-bg.png");
 }
 .msg:last-child{
     margin-right: 0;
