--- a/css/login-page.css
+++ b/css/login-page.css
@@ -127,7 +127,8 @@ button:active{
     margin-left: 50%;
     transform: translateX(-50%);
     padding: 0 .2rem;
-    font: bold .5rem "Helevtica Neue",Arial,sans-serif;
+    font-size: .5rem;
+    font-weight: bold;
     color: #25272e;
     background-color: #fff;
 }
