--- a/css/login-page.css
+++ b/css/login-page.css
@@ -171,7 +171,7 @@ button:active{
     /*position: absolute;*/
     /*bottom: 0;*/
     width: 100%;
-    height: 2.4rem;
+    /*height: 2.4rem;*/
     background: url("../imgs/footer-bg.jpg") no-repeat center;
     background-size: 100% 100%;
 }
@@ -185,7 +185,7 @@ button:active{
     margin: auto;
 }
 .slogan{
-    position: relative;
+    /*position: relative;*/
     float: left;
     height: 100%;
     font-size: .3rem;
@@ -197,12 +197,13 @@ button:active{
     user-select: none;
 }
 .slogan p{
-    margin-top: 1.2rem;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
+    margin: 0;
+    /*margin-top: 1.2rem;*/
+    -webkit-transform: translateY(calc(1.2rem - 50%));
+    -moz-transform: translateY(calc(1.2rem - 50%));
+    -ms-transform: translateY(calc(1.2rem - 50%));
+    -o-transform: translateY(calc(1.2rem - 50%));
+    transform: translateY(calc(1.2rem - 50%));
 }
 #obtain{
     float: right;
