--- a/css/login-page.css
+++ b/css/login-page.css
@@ -268,9 +268,12 @@ button:active{
     top: -.05rem;
     width: 1.4rem;
     height: .4rem;
+    text-align: center;
     background-color: #29b078;
+    border: none;
     border-radius: .1rem;
     color: #ffffff;
+    cursor: pointer;
 }
 .reg{
     margin-top: .25rem;
@@ -395,12 +398,20 @@ button:active{
         margin-bottom: .5rem;
         padding-right: 0;
     }
+    .reason .reason-title{
+        position: relative;
+        margin-left: calc(50% - 170px);
+        transform: none;
+    }
 }
 @media all and (max-width: 424px){
     .items .point{
         font-size: 24px;
     }
     .reason .reason-title{
+        position: relative;
+        margin-left: calc(50% - 150px);
+        transform: none;
         font-size: 30px;
         min-width: 300px;
     }
