--- a/css/login-page.css
+++ b/css/login-page.css
@@ -200,11 +200,11 @@ button:active{
 }
 .slogan p{
     margin: 0;
-    -webkit-transform: translateY(calc(1.2rem - 50%));
-    -moz-transform: translateY(calc(1.2rem - 50%));
-    -ms-transform: translateY(calc(1.2rem - 50%));
-    -o-transform: translateY(calc(1.2rem - 50%));
-    transform: translateY(calc(1.2rem - 50%));
+    -webkit-transform: translateY(1.2rem) translateY(-50%);
+    -moz-transform: translateY(1.2rem) translateY(-50%);
+    -ms-transform: translateY(1.2rem) translateY(-50%);
+    -o-transform: translateY(1.2rem) translateY(-50%);
+    transform: translateY(1.2rem) translateY(-50%);
 }
 #obtain{
     float: right;
