--- a/css/login-page.css
+++ b/css/login-page.css
@@ -148,9 +148,9 @@ button:active{
     color: #7f8082;
 }
 .msg{
+    position: relative;
     float: left;
     margin-right: calc((100% - 10.5rem) / 2 - .1px);
-    padding: 0 .65rem;
     width: 3.5rem;
     height: 2.15rem;
     font-size: .2rem;
@@ -159,7 +159,8 @@ button:active{
 }
 
 .msg p{
-    margin-top: 50%;
+    padding: 0 .65rem;
+    margin-top: 32%;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
@@ -169,8 +170,9 @@ button:active{
 .messages .msg:hover P{
     transform:scale(1.1,1.1) translateY(-50%);
 }
-.msg:nth-child(2){
-    text-align: center;
+.msg:nth-child(2) p{
+    /*text-align: center;*/
+    padding: 0 .85rem;
 }
 .msg:last-child{
     margin-right: 0;
