--- a/css/login-page.css
+++ b/css/login-page.css
@@ -166,6 +166,9 @@ button:active{
     -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
+    word-break: normal;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 .messages .msg:hover P{
     transform:scale(1.1,1.1) translateY(-50%);
