--- a/css/login-page.css
+++ b/css/login-page.css
@@ -174,6 +174,9 @@ input[type=button]:active{
 .msg:nth-child(2) p{
     padding: 0 .82rem;
 }
+.msg:nth-child(3) p{
+    padding: 0 .7rem;
+}
 .msg:last-child{
     margin-right: 0;
 }
